# MyBookRec

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: code-reviewer.md  code-simplifier.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/code-simplifier/: SKILL.md
.claude/skills/python-pro/: SKILL.md
.claude/skills/write-prd/: SKILL.md
.dvc/: config
data/transformed/: books_with_genres.parquet  books_with_interactions.parquet  my_books.csv
mybookrec/: __init__.py  io.py  recommend.py  settings.py
mybookrec/data/: transform_and_save.ipynb
mybookrec/data_load/: __init__.py  build_training_interactions.ipynb  build_training_interactions.py  transform_and_save.ipynb  transform_raw.py
mybookrec/eval/: __init__.py  evaluate.py  metrics.py  run_eval.ipynb  vibe_check.ipynb  vibe_check.py
mybookrec/features/: build_author_features.py  build_embedding_input.py  build_isbn_index.py  build_item_feature.ipynb  build_item_features.py  build_train_user_features.ipynb  build_train_user_features.py  build_training_pairs.ipynb  build_user_feature.ipynb  build_user_features.py  feature_engineering.ipynb  generate_vocab.py  genre_vocab.json  rebuild.py  training_pairs.py
mybookrec/index/: __init__.py  build_index.py  faiss_index.py
mybookrec/ingest/: __init__.py  author_lookup.py  bulk_openlibrary.py  cli.py  google_books.py  http_client.py  language_map.py  openlibrary.py  refresh_index.py  schemas.py  sources.py  to_gold.py  to_silver.py
mybookrec/io/: __init__.py  artifacts.py  checkpoints.py  eval_data.py
mybookrec/model/: __init__.py  cross_encoder.py  loss.py  towers.py  train.ipynb  train.py
mybookrec/serve/: __init__.py  __main__.py  app.py  schemas.py  user_features.py
mybookrec/tracking/: __init__.py  backfill.py  mlflow_tracker.py
notebooks/: EDA.ipynb
plans/: book-recommender-mvp-plan.md  v3-overhaul-deferred-items.md  v3-overhaul-results.md
scripts/: build_author_features.py  build_index.py  build_synthetic_library.py  embed.ipynb  evaluate.py  recommend.py  train.py  vibe_check.py
scripts/data_load/: __init__.py  build_training_interactions.py  transform_raw.py
scripts/features/: __init__.py  build_author_features.py  build_item_features.py  build_train_user_features.py  build_user_features.py  generate_vocab.py
src/mybookrec/: __init__.py
src/mybookrec/data/: transform_and_save.ipynb
tests/: conftest.py  test_settings.py  test_tracking.py
tests/features/: test_build_embedding_input.py  test_rebuild.py
tests/ingest/: test_author_lookup.py  test_bulk_openlibrary.py  test_google_books.py  test_http_client.py  test_language_map.py  test_openlibrary.py  test_schemas.py  test_sources.py  test_to_gold.py  test_to_silver.py
tests/io/: test_artifacts.py
tests/serve/: test_app.py  test_user_features.py
