[project]
name = "mybookrec"
version = "0.1.0"
description = "Personal book recommendation system using a two-tower neural network"
requires-python = ">=3.12"
dependencies = [
    "polars",
    "pandas",
    "torch",
    "sentence-transformers",
    "faiss-cpu",
    "pydantic-settings",
    "pyyaml",
    "huggingface-hub",
    "numpy",
    "matplotlib>=3.10.8",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "pre-commit",
    "jupyter",
    "dvc>=3.67.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.ruff]
target-version = "py312"
line-length = 120
# Notebooks are a different lint domain (cell magic, display-driven layouts).
# Only embed.ipynb (Colab GPU) and EDA.ipynb (exploratory) remain.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# E (pycodestyle errors), F (pyflakes), W (warnings), I (isort), N (naming),
# D (pydocstyle/google), UP (pyupgrade), SIM (flake8-simplify), C4 (comprehensions).
# N806/N803 stay enabled — they catch single-letter/uppercase variable names
# (B, K, H, M_like, etc.) which are unreadable. Rename to batch_size, top_k,
# hidden_dim, like_mask, etc. instead.
select = ["E", "F", "W", "I", "N", "D", "UP", "SIM", "C4"]
ignore = [
    "N812",  # `import torch.nn.functional as F` — universal PyTorch convention
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need every docstring (pytest function names are the docs).
"tests/**" = ["D"]
# Pipeline scripts have module-level docstrings; per-function parse_args() is repetitive.
"mybookrec/data_load/**" = ["D107"]  # __init__ docstrings on dataclasses-ish helpers
"mybookrec/features/build_*.py" = ["D107"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
 requires = ["hatchling"]
build-backend = "hatchling.build"
